# minco-python

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  MVP.md  README.md  global.toml  install-others.sh  install-ros.sh  justfile  pnc_setup.bash  pyproject.toml  setup.py  trajectory.pyi
config/: casadi_quadrotor_flatness.yaml  default_flatness_config.yaml  default_gcopter.yaml  lbfgs.yaml
docs/: casadi_flatness_workflow.md
src/casadi_flatness/: quadrotor_flatness_generator.py
src/minco_trajectory/config/: gcopter.rviz
src/minco_trajectory/include/: flatness.hpp  flatness_casadi.hpp  gcopter.hpp  geo_utils.hpp
src/minco_trajectory/include/casadi_generated/: README.md  quadrotor_flatness.h  quadrotor_flatness_config.hpp
src/minco_trajectory/src/: minco_module.cpp  traj_bindings.cpp
src/minco_trajectory/src/bindings/: bindings.hpp  flatness_bindings.cpp  gcopter_bindings.cpp  geo_utils_bindings.cpp  polynomial_bindings.cpp  root_finder_bindings.cpp  sdlp_bindings.cpp
src/minco_trajectory/src/casadi_generated/: README.md  quadrotor_flatness.c
src/trajectory_server/: CMakeLists.txt  package.xml
src/trajectory_server/config/: global_planning.yaml
src/trajectory_server/include/gcopter/: firi.hpp  flatness.hpp  gcopter.hpp
src/trajectory_server/src/: global_planning.cpp
tests/: test_casadi_flatness.py  test_flatness_bindings.py  test_gcopter_bindings.py  test_gcopter_casadi_flatness.py  test_gcopter_casadi_visualization.py  test_geo_utils_bindings.py  test_polynomial_bindings.py  test_root_finder_bindings.py  test_sdlp_bindings.py  test_trajectory_functionalities.py
tools/: build_casadi_flatness  rebuild_extension
