<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>trajectory_server</name>
    <version>0.1.0</version>
    <description>the trajectory_server</description>
    <maintainer email="rongerch@mail2.sysu.edu.cn.com">Warrior Hanamy</maintainer>
    <license>BSD</license>



    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>rclcpp</depend>
    <exec_depend>ros2launch</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
        <build_type>ament_cmake</build_type>
    </export>

</package>